# amplifier-dashboard-attractor

./: .gitignore  README.md  pyproject.toml
amplifier_dashboard_attractor/: __init__.py  client.py  cxdb_client.py  mock_data.py  pipeline_executor.py  pipeline_logs_reader.py  server.py  session_reader.py
amplifier_dashboard_attractor/routes/: control.py  pipelines.py  submissions.py  ws.py
context/: attractor-dashboard-api.md
docs/plans/: 2026-02-25-consumer-readiness-design.md  2026-02-25-dashboard-observability-depth-design.md  2026-02-25-dashboard-observability-depth-plan.md  2026-02-25-server-v1.1-design.md  2026-02-25-server-v1.1-implementation.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  theme.css
frontend/src/components/: DetailPanel.tsx  MetricsBar.tsx  PipelineEdge.tsx  PipelineNode.tsx
frontend/src/hooks/: usePolling.ts  useWebSocket.ts
frontend/src/lib/: api.ts  dotLayout.ts  types.ts
frontend/src/views/: FleetView.tsx  NodeView.tsx  PipelineView.tsx
scripts/: generate_sample_data.py
tests/: test_cancel.py  test_client.py  test_cxdb_client.py  test_human_gates.py  test_mock_data.py  test_pipeline_executor.py  test_pipeline_logs_reader.py  test_routes.py  test_server.py  test_session_reader.py  test_sse_events.py  test_submissions.py
